# railsup

./: Cargo.toml  LICENSE  PROMPT.md  README.md  justfile
.github/workflows/: ci.yml  release.yml  update-rails-fallback.yml  update-readme-version.yml
agentflow/pep/pep-0001-shell-integration-for-automatic-path-management/: IMPLEMENTATION-MANDATE.md  pep-0001-shell-integration-for-automatic-path-management.md
src/: config.rs  download.rs  main.rs  paths.rs  platform.rs
src/cli/: agent.rs  bundler.rs  dev.rs  exec.rs  mod.rs  new.rs  ruby.rs  shell_init.rs  which.rs
src/cli/doctor/: ai.rs  checks.rs  mod.rs  report.rs
src/ruby/: detect.rs  mod.rs
src/util/: mod.rs  process.rs  tls.rs  ui.rs
tests/: integration.rs
tests/fixtures/monorepo/: Gemfile
tests/fixtures/monorepo/apps/myapp/config/: application.rb
tests/fixtures/non-rails-ruby/lib/: my_gem.rb
tests/fixtures/rails-8-app/config/: application.rb
tests/harness/: assertions.rs  fixture.rs  mod.rs  runner.rs
tests/integration/: binstub_preference.rs  bundle_detection.rs  command_wrapping.rs  error_messages.rs  opt_out.rs
