[package]
name = "railsup"
version = "0.2.3"
edition = "2021"
description = "The better way to install and run Ruby on Rails"
license = "MIT"
repository = "https://github.com/railsup-sh/railsup"
homepage = "https://railsup.sh"

[dependencies]
clap = { version = "4", features = ["derive"] }
which = "7"
anyhow = "1"
thiserror = "2"
dirs = "5.0"
toml = "0.8"
ureq = { version = "2.9", features = ["json"] }
indicatif = "0.17"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
